Fix card collapse

--- a/client/styles.css
+++ b/client/styles.css
@@ -47,10 +47,8 @@ html {
   color: #777;
   background-color: rgb(255, 255, 255);
   margin-bottom: 20px;
-  overflow: hidden;
-  transition: 0.2s;
   border-top: rgb(75, 119, 190) solid 5px;
-
+  max-height: auto;
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
     0 2px 4px rgba(0, 0, 0, 0.24);
 }
@@ -79,6 +77,7 @@ html {
   height: 55%;
   margin-right: 5%;
 }
+
 .details {
   font-size: 15px;
   color: rgb(108, 122, 137);
